# querymancer

./: .env.example  README.md  app.py  complexity_router_test_20250326_222723.json  complexity_router_test_20250326_223017.json  complexity_router_test_20250326_223212.json  dashboard.py  groq_test_20250326_221915.json  pyproject.toml  sambanova_test_20250326_221727.json  sambanova_test_result_20250326_221658.txt  test_groq_simple.py  test_optimization_strategies.py  test_sambanova.py  test_sambanova_file.py  test_sambanova_improved.py  test_sambanova_simple.py  token_optimization_test_20250326_223432.json
logs/: model_performance.json
querymancer/: agent.py  config.py  models.py  optimizations.py
